--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <meta name="google" content="nositelinkssearchbox">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="WebGL Template" />
-    <meta name="keywords" content="server, online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, webpack, webgl, threejs, glsl, shaders, noise, student, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative" />
+    <meta name="keywords" content="online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, webpack, webgl, threejs, glsl, shaders, noise, student, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no"/>
-    <meta name="author" content="John Doe" />
-    <meta name="publisher" content="John Doe" />
+    <meta name="author" content="Dakumisu" />
+    <meta name="publisher" content="Dakumisu" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#222222">
