--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
     <meta name="msapplication-navbutton-color" content="#171f22">
     <meta name="apple-mobile-web-app-status-bar-style" content="#171f22">
     <title>WebGL Template</title>
-    <link rel="icon" href="assets/img/icon/favicon.jpg" />
-    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/img/icon/favicon.jpg">
-    <link rel="icon" type="image/jpg" sizes="32x32" href="assets/img/icon/favicon.jpg">
-    <link rel="icon" type="image/jpg" sizes="192x192" href="assets/img/icon/favicon.jpg">
-    <link rel="icon" type="image/jpg" sizes="256x256" href="assets/img/icon/favicon.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/apple-touch-favicon.jpg">
-    <link rel="apple-touch-icon" href="assets/img/icon/apple-touch-favicon.jpg" />
-    <meta property="og:image" content="assets/img/icon/favicon.jpg" />
-    <meta name="msapplication-TileImage" content="assets/img/icon/favicon.jpg">
+    <link rel="icon" href="assets/icon/favicon.jpg" />
+    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/icon/favicon.jpg">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="assets/icon/favicon.jpg">
+    <link rel="icon" type="image/jpg" sizes="192x192" href="assets/icon/favicon.jpg">
+    <link rel="icon" type="image/jpg" sizes="256x256" href="assets/icon/favicon.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-favicon.jpg">
+    <link rel="apple-touch-icon" href="assets/icon/apple-touch-favicon.jpg" />
+    <meta property="og:image" content="assets/icon/favicon.jpg" />
+    <meta name="msapplication-TileImage" content="assets/icon/favicon.jpg">
     <meta name="msapplication-TileColor" content="#222222">
 </head>
 
