--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
 <body>
     <section class="canvas--container">
-        <canvas class="webgl"></canvas>
+        <canvas class="sketch"></canvas>
     </section>
 </body>
 
