--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="google" content="notranslate"/>
     <meta name="google" content="nositelinkssearchbox">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="WebGL Template" />
+    <meta name="description" content="Beesly" />
     <meta name="keywords" content="online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, webpack, webgl, threejs, glsl, shaders, noise, student, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no"/>
     <meta name="author" content="Dakumisu" />
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#222222">
     <meta name="msapplication-navbutton-color" content="#171f22">
     <meta name="apple-mobile-web-app-status-bar-style" content="#171f22">
-    <title>WebGL Template</title>
+    <title>Beesly</title>
     <link rel="icon" href="assets/icon/favicon.jpg" />
     <link rel="icon" type="image/jpg" sizes="16x16" href="assets/icon/favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="32x32" href="assets/icon/favicon.jpg">
