--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <meta name="google" content="notranslate"/>
     <meta name="google" content="nositelinkssearchbox">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="Beesly" />
-    <meta name="keywords" content="online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, webpack, webgl, threejs, glsl, shaders, noise, student, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative" />
+    <meta name="description" content="Three.js starter - Beesly 🍜" />
+    <meta name="keywords" content="online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, webpack, webgl, threejs, glsl, shaders, noise, student, monke, beesly, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no"/>
     <meta name="author" content="Dakumisu" />
     <meta name="publisher" content="Dakumisu" />
@@ -18,16 +18,16 @@
     <meta name="theme-color" content="#222222">
     <meta name="msapplication-navbutton-color" content="#171f22">
     <meta name="apple-mobile-web-app-status-bar-style" content="#171f22">
-    <title>Beesly</title>
-    <link rel="icon" href="assets/icon/favicon.jpg" />
-    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/icon/favicon.jpg">
-    <link rel="icon" type="image/jpg" sizes="32x32" href="assets/icon/favicon.jpg">
-    <link rel="icon" type="image/jpg" sizes="192x192" href="assets/icon/favicon.jpg">
-    <link rel="icon" type="image/jpg" sizes="256x256" href="assets/icon/favicon.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-favicon.jpg">
-    <link rel="apple-touch-icon" href="assets/icon/apple-touch-favicon.jpg" />
-    <meta property="og:image" content="assets/icon/favicon.jpg" />
-    <meta name="msapplication-TileImage" content="assets/icon/favicon.jpg">
+    <title>Beesly 🍜</title>
+    <link rel="icon" href="assets/icon/favicon.png" />
+    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/icon/favicon.png">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="assets/icon/favicon.png">
+    <link rel="icon" type="image/jpg" sizes="192x192" href="assets/icon/favicon.png">
+    <link rel="icon" type="image/jpg" sizes="256x256" href="assets/icon/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-favicon.png">
+    <link rel="apple-touch-icon" href="assets/icon/apple-touch-favicon.png" />
+    <meta property="og:image" content="assets/icon/favicon.png" />
+    <meta name="msapplication-TileImage" content="assets/icon/favicon.png">
     <meta name="msapplication-TileColor" content="#222222">
 </head>
 
