--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 	<section class="canvas--container">
-		<canvas data-ref="canvas" class="sketch" />
+		<canvas data-ref="canvas" class="sketch"></canvas>
 	</section>
 
 	<script type="module" src="./src/app.js"></script>
