--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Three.js starter - Beesly 🍜" />
 	<meta name="keywords"
-		content="online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, webpack, webgl, threejs, glsl, shaders, noise, student, monke, beesly, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative" />
+		content="online, 3D, game, web, webdeveloppement, javascript, ux, ui, experience, animation, interaction, microinteraction, html, css, scss, vite, rollup, webgl, threejs, glsl, shaders, noise, student, monke, beesly, motion, motiondesign, graphic, graphicdesign, digital, audiovisuel, design, multimédia, art, technologie, adobe, front-end, dev, webgl, js, creative, interactive" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no" />
 	<meta name="author" content="Dakumisu" />
 	<meta name="publisher" content="Dakumisu" />
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-	<section class="canvas--container">
+	<section class="canvas-container">
 		<canvas data-ref="canvas" class="sketch"></canvas>
 	</section>
 
