--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 
 <body>
 	<div class="ui">
-		<h1 data-ref="title" class="title">{{ home.title }}</h1>
-		<a target="_blank" href={{ home.doc.url }}>
-			<span class="doc">{{ home.doc.text }}</span>
-		</a>
+		<home-page data-ref="home"></home-page>
 	</div>
 
 	<section class="canvas-container">
