--- a/src/js/Dom/Shadow/home/home.html
+++ b/src/js/Dom/Shadow/home/home.html
@@ -1,6 +1,8 @@
-<div class="container">
-	<h1 class="title">{{ home.title }}</h1>
-	<a target="_blank" href={{ home.doc.url }}>
-		<span class="doc">{{ home.doc.text }}</span>
-	</a>
-</div>
+<section class="page page-home">
+	<div class="container">
+		<h1 data-ref="title" class="title">{{ home.title }}</h1>
+		<a target="_blank" href={{ home.doc.url }}>
+			<span class="doc">{{ home.doc.text }}</span>
+		</a>
+	</div>
+</section>
