--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</anchor-link>
 
 		<!-- button example -->
-		<!-- <cta-button data-ref="cta" ref="button" label="Button" size="large"></cta-button> -->
+		<!-- <cta-button slot="test" data-ref="cta" ref="button" label="Button" size="large"></cta-button> -->
 	</div>
 
 	<section class="canvas-container">
