--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 	<div class="ui">
-		<h1 data-ref="title" class="title">{{ home.title }}</h1>
+		<p data-ref="title" class="title">{{ home.title }}</p>
 		<anchor-link data-ref="anchor" ref="link" label="{{ home.doc.text }}" link="{{ home.doc.url }}" blank>
 		</anchor-link>
 
